login with auth code